--- a/index.html
+++ b/index.html
@@ -42,12 +42,13 @@ margin-bottom:20px;
 
 <h1>What do codes do?</h1>
 
-<p>In CW(Combat Warriors) Codes can be used to give players currencies such as Aether which can help you obtain amazing effects, emotes and more!</p>
-
+<p>In CW(Combat Warriors) Codes can be used to give players currencies such as</p>
+    <p>Aether which can help you obtain amazing effects, emotes and more!</p>
+    
 <p style="color:green;"> Active Codes:</p>
     <p> The following is a list of active codes. </p>
 
-<p style="color:orange;">There are currently no active codes for Combat Warriors, but if any come out, it will be updated as fast as possible</p>
+<p style="color:orange;">There are currently no active codes for Combat Warriors, but if any come out, this list will be updated as fast as possible</p>
 <p></p>
 
 
