--- a/index.html
+++ b/index.html
@@ -39,6 +39,12 @@ margin-bottom:20px;
 
 
 <h1> Codes for Combat Warriors May 2023 </h1>
+    
+    
+    <h1>What is Combat Warriors?</h1>
+    <p> Combat Warriors is an active game on roblox with over 700 million visits!</p>
+    <p>                                                           
+   
 
 <h1>What do codes do?</h1>
 
