--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ margin-bottom:20px;
     
     
     <h1>What is Combat Warriors?</h1>
-    <p> Combat Warriors is an active game on roblox with over 700 million visits!</p>
+    <p> Combat Warriors is an active game free for all fighting game on roblox with over 700 million visits!</p>
     <p>                                                           
    
 
