--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@ margin-bottom:20px;
     
     
     <h1>What is Combat Warriors?</h1>
-    <p> Combat Warriors is an active game free for all fighting game on roblox with over 700 million visits!</p>
-    <p>                                                           
-   
+    <p> Combat Warriors is an active free for all fighting game on roblox with over 700 million visits!</p>
+    <p>                                                         
+   <img src="C:\Users\pooya\Desktop\Screenshot 2023-05-07 202523.png"
 
 <h1>What do codes do?</h1>
 
