--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ margin-bottom:20px;
     <p>                                                         
    <img src="C:\Users\pooya\Desktop\Screenshot 2023-05-07 202523.png">
 
-<h1>What do codes do?</h1>
+<h1>What do codes in CW do?</h1>
 
 <p>In CW(Combat Warriors) Codes can be used to give players currencies such as</p>
     <p>Aether which can help you obtain amazing effects, emotes and more!</p>
