--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ margin-bottom:20px;
     <h1>What is Combat Warriors?</h1>
     <p> Combat Warriors is an active free for all fighting game on roblox with over 700 million visits!</p>
     <p>                                                         
-   <img src="C:\Users\pooya\Desktop\Screenshot 2023-05-07 202523.png"> 
+   <img src="https://tr.rbxcdn.com/a9a17b005449b0d07cb18db9e9531bf2/768/432/Image/Png"> 
 
 <h1>What do codes in CW do?</h1>
 
