--- a/index.html
+++ b/index.html
@@ -51,9 +51,10 @@ margin-bottom:20px;
 <p>In CW(Combat Warriors) Codes can be used to give players currencies such as</p>
     <p>Aether which can help you obtain amazing effects, emotes and more!</p>
     
-   <div style="text-align:center;> 
-    <img src="https://tr.rbxcdn.com/db139abb9cf4ff03bcc2b613dfed6415/768/432/Image/Png">
-                                                                                       </div>
+  <div style="display: flex; justify-content: center;">
+  <img src="https://tr.rbxcdn.com/db139abb9cf4ff03bcc2b613dfed6415/768/432/Image/Png" style="max-width: 80%;"/>
+</div>
+
     
 <p style="color:green;"> Active Codes:</p>
     <p> The following is a list of active codes. </p>
