--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@ margin-bottom:20px;
     
     <h1>What is Combat Warriors?</h1>
     <p> Combat Warriors is an active free for all fighting game on roblox with over 700 million visits!</p>
-    <p>                                                         
-   <img src="https://tr.rbxcdn.com/a9a17b005449b0d07cb18db9e9531bf2/768/432/Image/Png"> 
+    <p>You can unlock cool new weapons as you progress through the game.</p> 
+    
+   <img src="https://tr.rbxcdn.com/a9a17b005449b0d07cb18db9e9531bf2/768/432/Image/Png" alt="Image via Combat Warriors"> 
 
 <h1>What do codes in CW do?</h1>
 
