--- a/index.html
+++ b/index.html
@@ -45,8 +45,10 @@ margin-bottom:20px;
     <p> Combat Warriors is an active free for all fighting game on roblox with over 700 million visits!</p>
     <p>You can unlock cool new weapons as you progress through the game.</p> 
     
+     <div style="display: flex; justify-content: center;">
    <img src="https://tr.rbxcdn.com/a9a17b005449b0d07cb18db9e9531bf2/768/432/Image/Png" style="max-width: 80%;" alt="Image via Combat Warriors">
-
+    </div>
+         
 <h1>What do codes in CW do?</h1>
 
 <p>In CW(Combat Warriors) Codes can be used to give players currencies such as</p>
