--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ margin-bottom:20px;
   <div style="display: flex; justify-content: center;">
   <img src="https://tr.rbxcdn.com/db139abb9cf4ff03bcc2b613dfed6415/768/432/Image/Png" style="max-width: 80%;"/>
 </div>
-    <p style="color:grey;" font-size: 10px;> image via Combat Warriors </p>
+    <p style="color:grey; font-size: 10px;"> image via Combat Warriors </p>
     
     
 <p style="color:green;"> Active Codes:</p>
