--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ margin-bottom:20px;
      <div style="display: flex; justify-content: center;">
    <img src="https://tr.rbxcdn.com/a9a17b005449b0d07cb18db9e9531bf2/768/432/Image/Png" style="max-width: 80%;" alt="Image via Combat Warriors">
     </div>
-         
+         <p style="color:grey; font-size: 10px;"> image via Combat Warriors </p>
     
 <h1>What do codes in CW do?</h1>
 
