--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@ margin-top:20px;
 margin-bottom:20px;
 }
 
+ body{
+     background-size: cover;
+  background-repeat: repeat;
+     margine:30px;
+    
 
 
 </style>
