--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@ margin-bottom:20px;
 
 
 <h1>How to redeem codes in CW (Combat Warriors)
-    <p> 1. Join Combat Warriors.</p> 
-    <p> 2. In the menu (where you can change weapons, effects and more) you will find the 'Enter code'</p>
-    <p> 3. Enter the code </p> 
-    <p> 4. Press submit </p> 
+    <p style="font-size:8px;"> 1. Join Combat Warriors.</p> 
+    <p style="font-size:8px;"> 2. In the menu (where you can change weapons, effects and more) you will find the 'Enter code' option.</p>
+    <p style="font-size:8px;"> 3. Enter the code in.</p> 
+    <p style="font-size:8px;"> 4. Press submit. </p> 
 
 
 
