--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ margin-bottom:20px;
     </div>
          <p style="color:grey; font-size: 10px;"> image via PlayCombatWarriors </p>
     
-<h1>What do codes in CW do?</h1>
+<h1>What do codes do in CW?</h1>
 
 <p>In CW(Combat Warriors) Codes can be used to give players currencies such as</p>
     <p>Aether which can help you obtain amazing effects, emotes and more!</p>
