--- a/index.html
+++ b/index.html
@@ -130,7 +130,8 @@ margin-bottom:20px;
     <p style="font-size:13px;"> effects and more) you will find the 'Enter code' option.</p>
     <p style="font-size:13px;"> 3. Enter the code in.</p> 
     <p style="font-size:13px;"> 4. Press submit. </p> 
-<img src"file:///C:/Users/pooya/Desktop/HTML/CWcodes.png"
+<img src"![Uploading CWcodes.png…]()"
+
 
 
 
