--- a/index.html
+++ b/index.html
@@ -130,9 +130,11 @@ margin-bottom:20px;
     <p style="font-size:13px;"> effects and more) you will find the 'Enter code' option.</p>
     <p style="font-size:13px;"> 3. Enter the code in.</p> 
     <p style="font-size:13px;"> 4. Press submit. </p> 
-<img src"https://github.com/EnchantedBobux/EnchantedCodes.github-io/blob/9747434ebd6b555fc530d3de6734f970ff3b43dc/images/CWcodes.png"/>
+    
+     <div style="display: flex; justify-content: center;">
+<img src"https://github.com/EnchantedBobux/EnchantedCodes.github-io/blob/9747434ebd6b555fc530d3de6734f970ff3b43dc/images/CWcodes.png"/  style="max-width: 80%;">
 
-
+    </div>
 
 
     
